# cc-truffle-performance-plugin

./: .mcp.json  CLAUDE.md  LICENSE.md  README.md  USER_MANUAL.md
.claude-plugin/: plugin.json
agents/: baseline-establisher.md  compiler-graph-analyst.md  explorer.md  hypothesis-validator.md  implementation-planner.md  implementer.md
docs/: architecture-main.md  architecture-slim-process.md
mcp-awfy/: CLAUDE.md  README.md  pyproject.toml
mcp-awfy/src/mcp_awfy/: __init__.py  models.py  runner.py  server.py
mcp-awfy/src/mcp_awfy/awfy/: __init__.py  bounce.py  cd.py  deltablue.py  havlak.py  json.py  list.py  mandelbrot.py  nbody.py  permute.py  queens.py  richards.py  sieve.py  storage.py  towers.py
mcp-awfy/src/mcp_awfy/awfy/som/: dictionary.py  identity_dictionary.py  identity_set.py  set.py  vector.py
skills/detecting-deoptimizations/: PATTERNS.md  SKILL.md
skills/detecting-performance-warnings/: SKILL.md
skills/fetching-truffle-documentation/: SKILL.md
skills/optimization-workflow-orchestrator/: LESSONS_LEARNED_FORMAT.md  SKILL.md
skills/profiling-memory-allocations/: SKILL.md
skills/profiling-with-cpu-sampler/: PATTERNS.md  SKILL.md
skills/tracing-compilation-events/: SKILL.md
skills/tracing-execution-counts/: SKILL.md
skills/tracing-inlining-decisions/: SKILL.md
