[project]
name = "mcp-awfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antony Kamp", email = "info@antonykamp.de" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "pydantic>=2.12.5",
]

[project.scripts]
mcp-awfy = "mcp_awfy:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
